# representation-drift-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.research.in  vercel.json
api/: project-guide.js  project-guide.test.mjs
configs/: catalog.yaml  distillation-local-multiseed.yaml  domain-comparison-local.yaml  eurosat-cifar100-local-multiseed.yaml  eurosat-cifar100-local.yaml  full-finetune-local-multiseed.yaml  full-scale-gpu-multiseed.yaml  full-scale-gpu.yaml  interpolation-local.yaml  legacy-clip-food101-cifar10.yaml  linear-probe-local-multiseed.yaml  lp-ft-local-multiseed.yaml  method-comparison-local.yaml  nullspace-local-multiseed.yaml  pets-eurosat-local-multiseed.yaml  pets-eurosat-local.yaml  pets-mnist-local-multiseed.yaml  pets-mnist-local.yaml  reproduction-expanded-local-multiseed.yaml  reproduction-expanded-local.yaml  reproduction-local-distillation.yaml  reproduction-local-full-finetune.yaml  reproduction-local-linear-probe.yaml  reproduction-local-lp-ft.yaml  reproduction-local-multiseed.yaml  reproduction-local-nullspace.yaml  reproduction-local-selective-lora.yaml  reproduction-local-wise-source.yaml  reproduction-local.yaml  selective-lora-local-multiseed.yaml  smoke.yaml  wise-ft-local.yaml  wise-source-local-multiseed.yaml
data/: README.md
docs/: deploy-vercel.md
kaggle/: RUNBOOK.md  full-scale-benchmark.ipynb
reports/: README.md  claude-fable-5-audit.md  excluded-runs.md  expanded-local-preregistration.md  fairness-feedback-loop-scope-audit.md  full-scale-preregistration.md  legacy-code-audit.md  (+3 more)
(+198 files in other folders)
